day-10/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
