day-10/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-service
  labels:
    app: nginx-example
spec:
  selector:
    app: nginx-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
